# MyoMesh

./: .gitignore  Patient_1.mat  README.md  config.sh  execAll.py  myomesh.yml
convertPly2STL/: CMakeLists.txt
src/mat2msh/: makeSurface.py  markFibroseFromMsh.py  readMat.py  readScar.py  saveMsh.py
src/msh2alg/: conf.ini  generate_fiber_3D_biv.py  msh2alg.py
